--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AM Fall In Love</title>
     <!-- Bootstrap -->
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,8 +28,6 @@
     <!-- simplyCountdown -->
     <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
     <script src="countdown/simplyCountdown.min.js"></script>
-
-    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -41,7 +40,7 @@
         <h1>Aden & Mega</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
-        <a href="#undangan" class="btn btn-lg">Lihat Undangan</a>
+        <a href="#undangan" class="btn btn-lg text-center">Lihat Undangan</a>
       </main>
     </section>
 
@@ -99,7 +98,7 @@
             </h3>
             <p>
               Oleh karena itu, dengan segala hormat, kami bermaksud untuk
-              mengundang Ba[ak/Ibu, Saudara/i untuk hadir pada acara pernikahan
+              mengundang Bapak/Ibu, Saudara/i untuk hadir pada acara pernikahan
               kami.
             </p>
           </div>
@@ -227,7 +226,193 @@
       </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <section id="story" class="story">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Bagaimana Cinta Kami Bersemi</span>
+            <h2>Cerita Kami</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
+              similique? Saepe veritatis vero ipsa quis.
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <ul class="timeline">
+              <li>
+                <div
+                  class="timeline-image"
+                  style="background-image: url(img/Milo.jpg)"
+                ></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Pertama Ngechat</h3>
+                    <span>23 Februari 2022</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Numquam cupiditate aliquam harum molestiae, eaque dolorum!
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div
+                  class="timeline-image"
+                  style="background-image: url(https://picsum.photos/300/300)"
+                ></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Pertama Ketemu</h3>
+                    <span>19 Maret 2022</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Error placeat iusto aspernatur velit soluta mollitia rerum
+                      dignissimos, facere dolorum amet?
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div
+                  class="timeline-image"
+                  style="background-image: url(https://picsum.photos/301/301)"
+                ></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Pergi Ke Yogyakarta</h3>
+                    <span>26 Agustus 2022</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Sapiente iste cupiditate incidunt temporibus ipsa dolor
+                      iure, reiciendis, nostrum cumque, illo qui sequi illum
+                      quisquam.
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div
+                  class="timeline-image"
+                  style="background-image: url(https://picsum.photos/302/302)"
+                ></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Menikah</h3>
+                    <span>14 Desember 2026</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Nam inventore enim cumque, facere non vero similique
+                      recusandae, accusamus odio repellat adipisci sint.
+                    </p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="gallery" class="gallery">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Memori Kisah Kami</span>
+            <h2>Galeri Foto</h2>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
+              similique? Saepe veritatis vero ipsa quis.
+            </p>
+          </div>
+        </div>
+        <div
+          class="row row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center"
+        >
+          <div class="col mt-3">
+            <a
+              href="img/Gallery/1.jpg"
+              data-toggle="lightbox"
+              data-caption="AM1"
+              data-gallery="mygallery"
+            >
+              <img
+                src="img/Gallery/thumbnail/1.jpg"
+                alt="AM1"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="https://picsum.photos/id/127/1024/576"
+              data-toggle="lightbox"
+              data-caption="AM2"
+              data-gallery="mygallery"
+            >
+              <img
+                src="https://picsum.photos/id/127/1024/727"
+                alt="AM2"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="https://picsum.photos/id/124/1024/576"
+              data-toggle="lightbox"
+              data-caption="AM3"
+              data-gallery="mygallery"
+            >
+              <img
+                src="https://picsum.photos/id/124/1024/727"
+                alt="AM3"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="https://picsum.photos/id/147/1024/576"
+              data-toggle="lightbox"
+              data-caption="AM4"
+              data-gallery="mygallery"
+            >
+              <img
+                src="https://picsum.photos/id/147/1024/727"
+                alt="AM4"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="https://picsum.photos/id/271/1024/576"
+              data-toggle="lightbox"
+              data-caption="AM5"
+              data-gallery="mygallery"
+            >
+              <img
+                src="https://picsum.photos/id/271/1024/727"
+                alt="AM5"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script>
       simplyCountdown(".simply-countdown", {
         year: 2026, // required
@@ -236,13 +421,15 @@
         hours: 8, // Default is 0 [0-23] integer
         words: {
           //words displayed into the countdown
-          days: { singular: "hari", plural: "hari" },
-          hours: { singular: "jam", plural: "jam" },
-          minutes: { singular: "menit", plural: "menit" },
-          seconds: { singular: "detik", plural: "detik" },
+          days: { singular: "Hari", plural: "Hari" },
+          hours: { singular: "Jam", plural: "Jam" },
+          minutes: { singular: "Menit", plural: "Menit" },
+          seconds: { singular: "Detik", plural: "Detik" },
         },
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
     <script>
       const stickyTop = document.querySelector(".sticky-top");
       const offcanvas = document.querySelector(".offcanvas");
