--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <div class="col-md-8 col-10 text-center">
           <h2>Informasi Acara</h2>
           <p class="alamat">
-            Alamat: Gedung Kologam, Kodiklat TNI AD. <br />
-            Jl. Aceh, Merdeka, Kec. Sumur Bandung, Kota Bandung
+            Alamat: Belakang toko MegaTeknik Gebang Mampang. <br />
+            Jl. Raya Margamulya, Margamulya, Kec. Bongas, Kabupaten Indramayu
           </p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5156.750387506448!2d108.0322190781681!3d-6.380799254975198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e694ad8f28a8f4b%3A0x49fd631886689b09!2sGebang%20Mampang%20Margamulya%20Bongas!5e0!3m2!1sen!2sid!4v1694368356971!5m2!1sen!2sid"
@@ -141,9 +141,8 @@
           <a href="https://goo.gl/maps/jFjBwKAuXK9vPwcV8" target="_blank" class="btn btn-light btn-sm mb-3">Klik untuk
             membuka peta</a>
           <p class="description">
-            Diharapkan untuk tidak salah alamat dan tanggal. manakala tiba di
-            tujuan namun tidak ada tanda-tanda sedang dilangsungkan
-            pernikahan, boleh jadi Anda salah jadwal, atau salah tempat.
+            Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang
+            dilangsungkan pernikahan, boleh jadi Anda salah jadwal, atau salah tempat.
           </p>
         </div>
       </div>
@@ -166,7 +165,7 @@
             </div>
             <div class="card-footer">
               Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan
-              dan kekhusyuan seluurh prosesi
+              dan kekhusyuan seluruh prosesi. Semoga acara ini berjalan lancar dan penuh berkah.
             </div>
           </div>
         </div>
@@ -186,8 +185,8 @@
               </div>
             </div>
             <div class="card-footer">
-              Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan
-              dan kekhusyuan seluurh prosesi
+              Saat acara resepsi diharapkan untuk kondusif menjaga kekhidmatan
+              dan kekhusyuan seluruh prosesi. Semoga acara ini berjalan lancar dan penuh berkah.
             </div>
           </div>
         </div>
@@ -202,8 +201,10 @@
           <span>Bagaimana Cinta Kami Bersemi</span>
           <h2>Cerita Kami</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
-            similique? Saepe veritatis vero ipsa quis.
+            Kami berdua pertama kali bertemu di sebuah kafe kecil di kota ini. Pertemuan itu adalah awal dari perjalanan
+            kami bersama. Kami mengalami banyak momen indah bersama, mengatasi tantangan bersama, dan tumbuh menjadi
+            pasangan yang kuat. Cerita cinta kami adalah cerita tentang kebersamaan, pengorbanan, dan cinta yang
+            mendalam.
           </p>
         </div>
       </div>
@@ -212,7 +213,7 @@
         <div class="col">
           <ul class="timeline">
             <li>
-              <div class="timeline-image" style="background-image: url(img/Milo.jpg)"></div>
+              <div class="timeline-image" style="background-image: url(img/chatPertama.png)"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h3>Pertama Ngechat</h3>
@@ -220,14 +221,14 @@
                 </div>
                 <div class="timeline-body">
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Numquam cupiditate aliquam harum molestiae, eaque dolorum!
+                    Ini adalah hari ketika kita pertama kali saling mengirim pesan. Percakapan itu membuka jendela ke
+                    dunia satu sama lain.
                   </p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300)"></div>
+              <div class="timeline-image" style="background-image: url(img/Pertama\ Ketemu.jpg)"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h3>Pertama Ketemu</h3>
@@ -235,32 +236,28 @@
                 </div>
                 <div class="timeline-body">
                   <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Error placeat iusto aspernatur velit soluta mollitia rerum
-                    dignissimos, facere dolorum amet?
+                    Hari ini adalah hari ketika kita pertama kali bertemu secara langsung. Pertemuan ini membawa
+                    kebahagiaan dan keceriaan yang tak terlupakan.
                   </p>
                 </div>
               </div>
             </li>
             <li>
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301)"></div>
+              <div class="timeline-image" style="background-image: url(img/yogya\ prambanan.jpg)"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h3>Pergi Ke Yogyakarta</h3>
                   <span>26 Agustus 2022</span>
                 </div>
                 <div class="timeline-body">
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Sapiente iste cupiditate incidunt temporibus ipsa dolor
-                    iure, reiciendis, nostrum cumque, illo qui sequi illum
-                    quisquam.
+                  <p>Perjalanan kami ke Yogyakarta adalah pengalaman yang luar biasa. Kami menikmati indahnya kota
+                    ini dan meluangkan waktu berdua.
                   </p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/302/302)"></div>
+              <div class="timeline-image" style="background-image: url(img/pernikahan\ teman.jpg)"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h3>Menikah</h3>
@@ -268,9 +265,8 @@
                 </div>
                 <div class="timeline-body">
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nam inventore enim cumque, facere non vero similique
-                    recusandae, accusamus odio repellat adipisci sint.
+                    Hari pernikahan kita, saat kita resmi menjadi pasangan suami istri. Ini adalah awal dari perjalanan
+                    kita bersama untuk selamanya.
                   </p>
                 </div>
               </div>
@@ -280,13 +276,7 @@
       </div>
     </div>
   </section>
-  <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path
-        fill="#f5f5f5"
-        fill-opacity="1"
-        d="M0,32L24,64C48,96,96,160,144,181.3C192,203,240,181,288,176C336,171,384,181,432,176C480,171,528,149,576,165.3C624,181,672,235,720,245.3C768,256,816,224,864,218.7C912,213,960,235,1008,240C1056,245,1104,235,1152,224C1200,213,1248,203,1296,208C1344,213,1392,235,1416,245.3L1440,256L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"
-      ></path>
-    </svg> -->
+
   <section id="gallery" class="gallery">
     <div class="container">
       <div class="row justify-content-center">
@@ -294,55 +284,42 @@
           <span>Memori Kisah Kami</span>
           <h2>Galeri Foto</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
-            similique? Saepe veritatis vero ipsa quis.
+            Selamat datang di galeri foto kami, di mana kami ingin berbagi momen-momen indah dalam perjalanan cinta
+            kami. Kami harap anda menikmati melihat foto-foto yang menggambarkan kisah kami dengan semua senyum, tawa,
+            dan kebahagiaan.
           </p>
         </div>
       </div>
       <div class="row row-cols-md-3 row-cols-sm-2 row-cols-2 justify-content-center">
-        <div class="col mt-3">
-          <a href="img/Gallery/1.jpg" data-toggle="lightbox" data-caption="AM1" data-gallery="mygallery">
-            <img src="img/Gallery/thumbnail/1.jpg" alt="AM1" class="img-fluid w-100 rounded" />
+        <div class="col mt-3 justify-content-center">
+          <a href="img/hgl mie ayam1.jpg" data-toggle="lightbox" data-caption="AM1" data-gallery="mygallery">
+            <img src="img/hgl mie ayam.jpg" alt="AM1" class="img-fluid w-100 rounded" />
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/127/1024/576" data-toggle="lightbox" data-caption="AM2"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/127/1024/727" alt="AM2" class="img-fluid w-100 rounded" />
+          <a href="img/makan jeruk1.jpg" data-toggle="lightbox" data-caption="AM2" data-gallery="mygallery">
+            <img src="img/makan jeruk.jpg" alt="AM2" class="img-fluid w-100 rounded" />
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/124/1024/576" data-toggle="lightbox" data-caption="AM3"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/124/1024/727" alt="AM3" class="img-fluid w-100 rounded" />
+          <a href="img/lamongan hgl1.jpg" data-toggle="lightbox" data-caption="AM3" data-gallery="mygallery">
+            <img src="img/lamongan hgl.jpg" alt="AM3" class="img-fluid w-100 rounded" />
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/147/1024/576" data-toggle="lightbox" data-caption="AM4"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/147/1024/727" alt="AM4" class="img-fluid w-100 rounded" />
+          <a href="img/depan kost kimbik1.jpg" data-toggle="lightbox" data-caption="AM4" data-gallery="mygallery">
+            <img src="img/depan kost kimbik.jpg" alt="AM4" class="img-fluid w-100 rounded" />
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/271/1024/576" data-toggle="lightbox" data-caption="AM5"
-            data-gallery="mygallery">
-            <img src="https://picsum.photos/id/271/1024/727" alt="AM5" class="img-fluid w-100 rounded" />
+          <a href="img/yogya prambanan 21.jpg" data-toggle="lightbox" data-caption="AM5" data-gallery="mygallery">
+            <img src="img/yogya prambanan 2.jpg" alt="AM5" class="img-fluid w-100 rounded" />
           </a>
         </div>
       </div>
     </div>
   </section>
-  <!-- <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 1440 320"
-      class="svgrsvp"
-    >
-      <path
-        fill="#222222"
-        fill-opacity="1"
-        d="M0,32L30,32C60,32,120,32,180,80C240,128,300,224,360,229.3C420,235,480,149,540,128C600,107,660,149,720,186.7C780,224,840,256,900,240C960,224,1020,160,1080,133.3C1140,107,1200,117,1260,101.3C1320,85,1380,43,1410,21.3L1440,0L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
-      ></path>
-    </svg> -->
+
   <section id="rsvp" class="rsvp">
     <div class="container">
       <div class="row justify-content-center">
@@ -385,22 +362,24 @@
         <div class="col-md-6">
           <div id="disqus_thread"></div>
           <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
             var disqus_config = function () {
-              this.page.url = "adensahwaludin.000webhostapp.com"; // Replace PAGE_URL with your page's canonical URL variable
-              this.page.identifier = "adensahwaludin"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
             };
-
-            (function () {
-              // DON'T EDIT BELOW THIS LINE
-              var d = document,
-                s = d.createElement("script");
-              s.src = "https://am-wedding.disqus.com/embed.js";
-              s.setAttribute("data-timestamp", +new Date());
+            */
+            (function () { // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              s.src = 'https://am-wedding-1.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
               (d.head || d.body).appendChild(s);
             })();
           </script>
-          <noscript>Please enable JavaScript to view the
-            <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+              Disqus.</a></noscript>
         </div>
       </div>
     </div>
@@ -413,9 +392,9 @@
           <span>Ungkapan Tanda Kasih</span>
           <h2>Kirim Hadidah</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            suscipit vitae repudiandae error iusto assumenda praesentium
-            impedit ipsa minima!
+            Kami sangat menghargai dukungan dan tanda kasih Anda. Berikut adalah beberapa opsi untuk mengirim hadiah
+            kepada kami:
+          </p>
           </p>
         </div>
       </div>
@@ -423,16 +402,14 @@
         <div class="col-md-6">
           <ul class="list-group">
             <li class="list-group-item">
-              <div class="fw-bold">BCA</div>
-              BCA 123456789 - ADEN SAHWALUDIN
+              <div class="fw-bold">BRI</div>
+              BRI 4324 0101 7424 533 - ADEN SAHWALUDIN
             </li>
             <li class="list-group-item">
-              <div class="fw-bold">BCA</div>
-              MANDIRI 12345678 - ADEN SAHWALUDIN
-            </li>
-            <li class="list-group-item">
-              <div class="fw-bold">Saweria</div>
-              <img src="img/qr code.jpeg" alt="Saweria QR" class="img-thumbnail" width="150" />
+              <div class="fw-bold">Shopee Pay</div>
+              Shopee Pay 081292596948 - ADEN SAHWALUDIN
+              <br>
+              <img src="img/qr code.jpg" alt="Shopee Pay QR" class="img-thumbnail" width="150" />
             </li>
           </ul>
         </div>
